# CppShot

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  application.manifest  cppshot.cbp  cppshot.depend  cppshot.layout  main.cpp  resources.rc
.github/workflows/: build-x64.yml  build-x86.yml  build.yml
res/: application.manifest  resources.rc  resources.rc.in
src/: BackdropWindow.cpp  CompositeScreenshot.cpp  CompositeScreenshot.h  Screenshot.cpp  Screenshot.h  Utils.cpp  Utils.h  main.cpp  resources.h  version.h.in
src/images/: CompositeScreenshot.cpp  CompositeScreenshot.h  Screenshot.cpp  Screenshot.h
src/managers/: Application.cpp  Application.h
src/ui/: Button.cpp  Button.h  Node.cpp  Node.h
src/windows/: BackdropWindow.cpp  BackdropWindow.h  MainWindow.cpp  MainWindow.h  Window.cpp  Window.h
